--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,19 @@
 body {
-  background-color: #e3e3e3; }
+  background-color: #efeaff;
+  color: #efeaff; }
 
 a, a:visited {
-  color: black;
+  color: #efeaff;
   text-decoration: none; }
 
 ul {
   list-style-type: none; }
 
 .desktop-nav {
+  background-color: #8e6bff;
   max-width: 100%;
-  height: 100px;
-  border-bottom: 2px solid black; }
+  height: 80px;
+  border-bottom: 2px solid #6738ff; }
 
 .nav-container {
   max-width: 75%;
@@ -31,14 +33,16 @@ ul {
     margin: 18px 5px;
     padding-left: 10px;
     display: inline-block; }
-    #desktop-menu li a:hover:after {
-      content: "";
-      display: block;
-      margin: 0 auto;
-      margin-top: 5px;
-      width: 75%;
-      height: 3px;
-      background-color: black; }
+    #desktop-menu li a:hover {
+      color: #5220ff; }
+      #desktop-menu li a:hover:after {
+        content: "";
+        display: block;
+        margin: 0 auto;
+        margin-top: 5px;
+        width: 75%;
+        height: 3px;
+        background-color: #5220ff; }
 
 #container {
   max-width: 75%;
@@ -61,9 +65,12 @@ ul {
     right: 0;
     left: 0; }
     .twitch-container .twitch-video #punkass {
+      border: 5px solid #1a1a1a;
       width: 100%;
       height: 100%; }
     .twitch-container .twitch-video .twitch-chat {
-      margin-top: 20px; }
+      width: 100%;
+      margin-top: 20px;
+      border: 5px solid #1a1a1a; }
 
 /*# sourceMappingURL=styles.css.map */
