--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,11 @@
 body{
-  background-color: #e3e3e3;
+  background-color: #efeaff;
+  color: #efeaff;
 }
 
 
 a, a:visited{
-  color: black;
+  color: #efeaff;
   text-decoration: none;
 }
 
@@ -13,9 +14,10 @@ ul{
 }
 
 .desktop-nav{
+  background-color: #8e6bff;
   max-width: 100%;
-  height: 100px;
-  border-bottom: 2px solid black;
+  height: 80px;
+  border-bottom: 2px solid #6738ff;
 }
 
 .nav-container{
@@ -41,6 +43,7 @@ ul{
     display: inline-block;
     a{
       &:hover{
+        color: #5220ff;
         &:after{
           content: "";
           display: block;
@@ -48,7 +51,7 @@ ul{
           margin-top: 5px;
           width: 75%;
           height: 3px;
-          background-color: black;
+          background-color: #5220ff;
         }
       }
     }
@@ -80,11 +83,14 @@ ul{
     right: 0;
     left: 0;
     #punkass{
+      border: 5px solid #1a1a1a;
       width: 100%;
       height: 100%;
     }
     .twitch-chat{
+      width: 100%;
       margin-top: 20px;
+      border: 5px solid #1a1a1a;
     }
   }
 }
